@@ -1,0 +1,18 @@
+version: v2.0
+neurons:
+  - density: 68750
+    region: mc0;Rt
+    traits:
+      layer: Rt
+      mtype: Rt_RC
+      etype:
+        cNAD_noscltb: 0.43
+        cAD_noscltb: 0.57
+  - density: 68750
+    region: mc1;Rt
+    traits:
+      layer: Rt
+      mtype: Rt_RC
+      etype:
+        cNAD_noscltb: 0.43
+        cAD_noscltb: 0.57
